@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.7 =
 -------------------------------------------------
+* Improved: Added "paid" column on admin course list.
 * Fixed: Issue with tinymce edit unit page.
 * Fixed: Dark screen when use "Save Progress & Exit" with discussion module.
 
